--- a/index.html
+++ b/index.html
@@ -6,88 +6,119 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <meta name="keywords" content="svetlana, cv, resume">
    <meta name="description" content="This is Svetlana Meritee's resume website">
-   <title>Svetlana Resume</title>
+
+   <link rel="stylesheet" href="styles.css">
+   <title>Resume</title>
 </head>
 
 <body>
-   <h1>Svetlana Meritee</h1>
+   <header class="header">
+      <h1>Resume</h1>
+   </header>
 
-   <img src="my_img.jpg" width="170" alt="Svetlana's photo">
+   <div class="container">
+      <div class="info">
+         <img src="my_img.jpg" class="avatar" alt="Photo">
 
+         <div class="info-text">
+            <h2>Svetlana</h2>
+            <br>
+            <p>Я являюсь студенткой онлайн школы <strong> Result School</strong>, где я изучаю Frontend Dewelopment на
+               курсе
+               Специалист.</p>
+            <p>В свободное от учебы время я <em>занимаюсь спортом</em> в фитнес клубе, катаюсь на велосипеде, гуляю с
+               собакой. Я
+               люблю <strong><em>путешествовать по разным красивым местам</em></strong> на автомобиле.</p>
+            <br>
 
-   <p>Я являюсь студенткой онлайн школы <strong> Result School</strong>, где я изучаю Frontend Dewelopment на курсе
-      Специалист.</p>
-   <p>В свободное от учебы время я <em>занимаюсь спортом</em> в фитнес клубе, катаюсь на велосипеде, гуляю с собакой. Я
-      люблю <strong><em>путешествовать по разным красивым местам</em></strong> на автомобиле.</p>
+            <h3>Список социальных сетей:</h3>
 
-   <h4>Список социальных сетей:</h4>
-
-   <a href="https://www.instagram.com/lanazaina/" target="_blank">Instagram</a>
-      |
-   <a href="https://telegram.org/" target="_blank">Telegram</a>
-      |
-   <a href="https://play.google.com/store/apps/details?id=com.whatsapp&hl=ru&gl=US" target="_blank">WhatsApp</a>
-
-   <h2>Мои хобби</h2>
-
-   <ol>
-      <li>Путешествия</li>
-      <li>Велосипед</li>
-      <li>Фитнес и Сауна</li>
-      <li>Походы</li>
-   </ol>
-
-   <h2>Опыт работы</h2>
-
-   <table>
-      <thead>
-         <th>Название</th>
-         <th>Должность</th>
-         <th>Год</th>         
-      </thead>
-      <tbody>
-         <tr>
-            <td>Физиолечение</td>
-            <td>Физиотерапевт</td>
-            <td>2000 -2016</td>
-         </tr>
-         <tr>
-            <td>Амбулатная помощь</td>
-            <td>Медсестра</td>
-            <td>2016 -2021</td>
-         </tr>
-         <tr>
-            <td>Tel-Ran IT School</td>
-            <td>Frontend Dewelopment</td>
-            <td>2022-2023</td>
-         </tr>
-         <tr>
-            <td>Result School</td>
-            <td>Frontend Dewelopment</td>
-            <td>2023 - сейчас </td>
-         </tr>
-      </tbody>
-   </table>
-
-   <h2>Связаться со мной</h2>
-   <form action="/">
-      <div>
-         <label for="name">Ваше имя:</label>
-         <input type="text" id="name" placeholder="Ваше имя">
+            <a href="https://www.instagram.com/lanazaina/" target="_blank">Instagram</a>
+            |
+            <a href="https://telegram.org/" target="_blank">Telegram</a>
+            |
+            <a href="https://play.google.com/store/apps/details?id=com.whatsapp&hl=ru&gl=US"
+               target="_blank">WhatsApp</a>
+         </div>
       </div>
-      <div>
-         <label for="email">Ваше email:</label>
-         <input type="email" id="email" placeholder="Ваш email">
-      </div>
-      <div>
-         <label for="massage">Ваше сообщение:</label>
-         <br>
-         <textarea id="message" cols="20" rows="5" placeholder="Введите Ваше сообщение..."></textarea>
+      <div class="card bg-green">
+         <h3>Мои хобби</h3>
+
+         <ol class="list">
+            <li>Путешествия</li>
+            <li>Велосипед</li>
+            <li>Фитнес и Сауна</li>
+            <li>Походы</li>
+         </ol>
       </div>
 
-      <input type="submit" value="Отправить">
-   </form>
+      <div class="card bg-red">
+         <h3>Опыт работы</h3>
 
+         <table class="table">
+            <!-- <thead>
+                  <th>Название:</th>
+                  <th>Должность:</th>
+                  <th>Год:</th>
+               </thead> -->
+            <tbody>
+               <tr>
+                  <td>Физиолечение</td>
+                  <td>Физиотерапевт</td>
+                  <td>2000 -2016</td>
+               </tr>
+               <tr>
+                  <td>Амбулатная помощь</td>
+                  <td>Медсестра</td>
+                  <td>2016 -2021</td>
+               </tr>
+               <tr>
+                  <td> Practice at Tel-Ran IT School</td>
+                  <td>Frontend Developer</td>
+                  <td>2022-2023</td>
+               </tr>
+               <tr>
+                  <td> Practice at Result School</td>
+                  <td>Frontend Developer</td>
+                  <td>2023 - сейчас </td>
+               </tr>
+            </tbody>
+         </table>
+      </div>
+
+      <div class="card bg-yellow">
+         <h3>Moe обучение:</h3>
+         <ul class="link-list">
+            <li>
+               <a href="https://tel-ran.de/" target="_blank">Tel-Ran IT-School</a>
+            </li>
+            <li>
+               <a href="https://result.school/" target="_blank">Result University</a>
+            </li>
+         </ul>
+      </div>
+
+      <form action="/" class="form">
+         <h3>Связаться со мной</h3>
+         <div class="form-row">
+            <div class="form-group">
+               <label for="name">Ваше имя:</label>
+               <input type="text" id="name" placeholder="Ваше имя">
+            </div>
+            <div class="form-group">
+               <label for="email">Ваше email:</label>
+               <input type="email" id="email" placeholder="Ваш email">
+            </div>
+         </div>
+         <div class="form-group">
+            <label for="massage">Ваше сообщение:</label>
+            <textarea id="message" cols="20" rows="5" placeholder="Введите Ваше сообщение..."></textarea>
+         </div>
+
+         <input class="btn" type="submit" value="Отправить">
+      </form>
+
+   </div>
 
 </body>
 
